<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobil Wheel</string>
    <string name="app_version">Version 1.1</string>
    <string name="app_description">This application allows you to control a virtual steering wheel using various input methods like WiFi, USB tethering, and manual IP input.</string>
    <string name="app_authors">Developed by: Geneon</string>
    <string name="back_button">Back</string>
    <string name="main_menu_title">MOBIL WHEEL</string>
    <string name="main_menu_subtitle">Virtual Controller Interface</string>
    <string name="button_start_engine">START ENGINE</string>
    <string name="button_dashboard">DASHBOARD</string>
    <string name="button_settings">SETTINGS</string>
    <string name="button_about">About</string>
    <string name="button_left_top">Left Top Button</string>
    <string name="button_left_bottom">Left Bottom Button</string>
    <string name="button_right_top">Right Top Button</string>
    <string name="button_right_bottom">Right Bottom Button</string>
    <string-array name="orientation_options">
        <item>Auto</item>
        <item>Screen faces on top</item>
        <item>Screen faces on your body</item>
    </string-array>
    
    <string name="title_connected">CONNECTED</string>
    <string name="title_offline">OFFLINE</string>
    <string name="about_link_discord">Discord</string>
    <string name="about_link_github">GitHub</string>
    <string name="about_link_web">Web</string>
    <string name="about_url_discord">https://discord.gg/XyxkZkay</string>
    <string name="about_url_github">https://github.com/tempestgf/mobilwheel</string>
    <string name="about_url_web">https://mobilwheel.com</string>
    
    <string name="title_settings">SETTINGS</string>
    <string name="label_steering_angle">STEERING ANGLE</string>
    <string name="label_swipe_threshold">SWIPE THRESHOLD</string>
    <string name="label_click_time_limit">CLICK TIME LIMIT</string>
    <string name="label_accel_sens">ACCELERATOR SENSITIVITY</string>
    <string name="label_brake_sens">BRAKE SENSITIVITY</string>
    <string name="checkbox_mute_bg">MUTE BACKGROUND VIDEO</string>
    <string name="checkbox_enable_telemetry">ENABLE TELEMETRY</string>
    <string name="button_reset_defaults">RESET DEFAULTS</string>
    <string name="heading_description">DESCRIPTION</string>
    <string name="heading_credits">CREDITS</string>
    <string name="heading_links">LINKS</string>
</resources>